--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="calculator">
             <div class="screen">0</div>
             <div class="keypad">
-               <div class="row row1"><button class="clear-btn" id="clear">C</button> <button class="clear-btn" id="all-clear">AC</button> <button class="operator-btn" id="percentage">%</button> <button class="operator-btn" id="divider">/</button></div>
+               <div class="row row1"><button class="clear-btn" id="clear">C</button> <button class="clear-btn" id="all-clear">AC</button> <button id="percentage">%</button> <button class="operator-btn" id="divider">/</button></div>
                <div class="row row2"><button class="number-btn">7</button> <button class="number-btn">8</button> <button class="number-btn">9</button> <button class="operator-btn" id="multiplier">*</button></div>
                <div class="row row3"><button class="number-btn">4</button> <button class="number-btn">5</button> <button class="number-btn">6</button> <button class="operator-btn" id="subtractor">-</button></div>
                <div class="row row4"><button class="number-btn">1</button> <button class="number-btn">2</button> <button class="number-btn">3</button> <button class="operator-btn" id="adder">+</button></div>
-               <div class="row row5"><button>-/+</button> <button class="number-btn">0</button> <button class="number-btn">.</button> <button class="operator-btn" id="equals">=</button></div>
+               <div class="row row5"><button id="negative">+/-</button> <button class="number-btn">0</button> <button class="number-btn">.</button> <button class="operator-btn" id="equals">=</button></div>
             </div>
         </div>
     </div>
